--- a/config/locales/experience.pt-BR.yml
+++ b/config/locales/experience.pt-BR.yml
@@ -54,6 +54,6 @@ pt-BR:
         region: "CA"
         country: "EUA"
         position: "Engenheiro de Software"
-        description: "Engenheiro de Software responsável por desenvolvimento de sistemas na empresa, em sistema de Home Office, usando Ruby on Rails, MySQL e Objective-C (iOS). Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Redmine e Pivotal para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Harverst para contabilização de horas, Git para versionamento de código, entre outras ferramentas."
+        description: "Engenheiro de Software responsável por desenvolvimento de sistemas na empresa, em sistema de Home Office, usando Ruby on Rails, MySQL, Objective-C e Swift (iOS). Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Redmine e Pivotal para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Harverst para contabilização de horas, Git para versionamento de código, entre outras ferramentas."
         start_date: "Set / 2012"
         end_date: "Atualmente"
