--- a/config/locales/about.en.yml
+++ b/config/locales/about.en.yml
@@ -2,6 +2,6 @@ en:
   about:
     title: "About Me"
     job_title: "Software Engineer in Maceió / AL - Brazil"
-    text: '<p itemprop="description">Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Quimbik, Inc. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012.</p><p>Gosto de trabalhar em grupo, sou movido a desafios. Sou perfeccionista, e sei que isso nem sempre é bom. Gosto de pesquisar coisas novas, propor soluções, resolver problemas, principalmente os mais difíceis.</p>'
+    text: "<p itemprop=\"description\">Bachelor's degree in Computer Science and Specialist in Computer Software Engineer, I've being working with Web Development since 2003 and currently I'm a Software Engineer at Quimbik, Inc. Since 2010, I'm an enthusiast of Mobile Development and iOS certified developer since 2012 by IDS Tecnologia, first Apple Authorized Training Center in Latin America.</p><p>I like to work in group and I'm enjoy challenges. I'm a perfectionist, and this is not always good. I like to research new things, come with solutions to solve problems, especially the thought ones.</p>"
     file_title: "PDF Download"
     file: "gmmcal.en.pdf"
