--- a/config/locales/template.en.yml
+++ b/config/locales/template.en.yml
@@ -1,7 +1,7 @@
 en:
   template:
     name: "Gustavo Cunha"
-    title: "Web development, Mobile and Software Engineer Consultant"
+    title: "Web developer, Mobile and Software Engineer Consultant"
     menu:
       home: "Home"
       about: "About"
