--- a/config/locales/template.pt-BR.yml
+++ b/config/locales/template.pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   template:
     name: "Gustavo Cunha"
-    title: "Desenvolvimento Web, Mobile, consultoria em Engenharia de Software"
+    title: "Desenvolvedor Web, Mobile, Consultor em Engenharia de Software"
     menu:
       home: "Home"
       about: "Sobre"
