--- a/config/locales/contact.en.yml
+++ b/config/locales/contact.en.yml
@@ -1,7 +1,7 @@
 en:
   contact:
     title: "Contact me"
-    subtitle: "Feel free to contact me."
+    subtitle: "Feel free to contact me"
     contacts:
       title: "Contacts"
       address:
