--- a/config/locales/contact.pt-BR.yml
+++ b/config/locales/contact.pt-BR.yml
@@ -1,7 +1,7 @@
 pt-BR:
   contact:
     title: "Contate-me"
-    subtitle: "Sinta-se a vontade para entrar em contato."
+    subtitle: "Sinta-se a vontade para entrar em contato"
     contacts:
       title: "Contatos"
       address:
