--- a/config/locales/experience.pt-BR.yml
+++ b/config/locales/experience.pt-BR.yml
@@ -22,7 +22,7 @@ pt-BR:
         start_date: "Mar / 2006"
         end_date: "Mar / 2007"
       item3:
-        name: "id5 Solução Web"
+        name: "id5 Soluções Web"
         city: "Maceió"
         region: "AL"
         country: "Brasil"
