--- a/config/locales/portfolio.en.yml
+++ b/config/locales/portfolio.en.yml
@@ -12,35 +12,35 @@ en:
         name: "Alagoas Dev Day"
         caption: "Alagoas Dev Day - Backend development"
       item2:
-        name: "Casamento - Planning, system development with unit tests and frontend integration"
-        caption: "Casamento"
+        name: "Wedding System"
+        caption: "Wedding System - Planning, system development with unit tests and frontend integration"
       item3:
-        name: "Duranbah Music - Backend development and frontend integration"
-        caption: "Duranbah Music"
+        name: "Duranbah Music"
+        caption: "Duranbah Music - Backend development and frontend integration"
       item4:
-        name: "Waterhouse - Backend development and frontend integration"
-        caption: "Waterhouse"
+        name: "Waterhouse"
+        caption: "Waterhouse - Backend development and frontend integration"
       item5:
-        name: "Lotebox MPV - Backend development and frontend integration de MVP"
-        caption: "Lotebox MPV"
+        name: "Lotebox MPV"
+        caption: "Lotebox MPV - Backend development and frontend integration of MVP"
       item6:
-        name: "Zeropixel - Backend development and frontend integration"
-        caption: "Zeropixel"
+        name: "Zeropixel"
+        caption: "Zeropixel - Backend development and frontend integration"
       item7:
-        name: "Kuka Estratégia - Backend development and frontend integration (partned with Zeropixel)"
-        caption: "Kuka Estratégia"
+        name: "Kuka Estratégia"
+        caption: "Kuka Estratégia - Backend development and frontend integration (partned with Zeropixel)"
       item8:
-        name: "Hospital Cliom - Backend development and frontend integration (partned with Zeropixel)"
-        caption: "Hospital Cliom"
+        name: "Hospital Cliom"
+        caption: "Hospital Cliom - Backend development and frontend integration (partned with Zeropixel)"
       item9:
-        name: "Grupo Jambo - Backend development and frontend integration (partned with Zeropixel)"
-        caption: "Grupo Jambo"
+        name: "Grupo Jambo"
+        caption: "Grupo Jambo - Backend development and frontend integration (partned with Zeropixel)"
       item10:
-        name: "Junior Almeida - Frontend integration (partned with Zeropixel)"
-        caption: "Junior Almeida"
+        name: "Junior Almeida"
+        caption: "Junior Almeida - Frontend integration (partned with Zeropixel)"
       item11:
-        name: "Maceió Mar Hotel - Backend development and frontend integration (partned with Zeropixel)"
-        caption: "Maceió Mar Hotel"
+        name: "Maceió Mar Hotel"
+        caption: "Maceió Mar Hotel - Backend development and frontend integration (partned with Zeropixel)"
       item12:
-        name: "Nordeste Gestão Contábil e Empresarial - Backend development and frontend integration (partned with Zeropixel)"
-        caption: "Nordeste Gestão Contábil e Empresarial"
+        name: "Nordeste Gestão Contábil e Empresarial"
+        caption: "Nordeste Gestão Contábil e Empresarial - Backend development and frontend integration (partned with Zeropixel)"
