--- a/config/locales/portfolio.pt-BR.yml
+++ b/config/locales/portfolio.pt-BR.yml
@@ -12,35 +12,35 @@ pt-BR:
         name: "Alagoas Dev Day"
         caption: "Alagoas Dev Day - Desenvolvimento backend"
       item2:
-        name: "Casamento - Planejamento, desenvolvimento de sistema com testes unitários e integração com frontend"
-        caption: "Casamento"
+        name: "Casamento"
+        caption: "Casamento - Planejamento, desenvolvimento de sistema com testes unitários e integração com frontend"
       item3:
-        name: "Duranbah Music - Desenvolvimento backend e integração com frontend"
-        caption: "Duranbah Music"
+        name: "Duranbah Music"
+        caption: "Duranbah Music - Desenvolvimento backend e integração com frontend"
       item4:
-        name: "Waterhouse - Desenvolvimento backend e integração com frontend"
-        caption: "Waterhouse"
+        name: "Waterhouse"
+        caption: "Waterhouse - Desenvolvimento backend e integração com frontend"
       item5:
-        name: "Lotebox MPV - Desenvolvimento backend e integração com frontend de MVP"
-        caption: "Lotebox MPV"
+        name: "Lotebox MPV"
+        caption: "Lotebox MPV - Desenvolvimento backend e integração com frontend de MVP"
       item6:
-        name: "Zeropixel - Desenvolvimento backend e integração com frontend"
-        caption: "Zeropixel"
+        name: "Zeropixel"
+        caption: "Zeropixel - Desenvolvimento backend e integração com frontend"
       item7:
-        name: "Kuka Estratégia - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
-        caption: "Kuka Estratégia"
+        name: "Kuka Estratégia"
+        caption: "Kuka Estratégia - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
       item8:
-        name: "Hospital Cliom - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
-        caption: "Hospital Cliom"
+        name: "Hospital Cliom"
+        caption: "Hospital Cliom - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
       item9:
-        name: "Grupo Jambo - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
-        caption: "Grupo Jambo"
+        name: "Grupo Jambo"
+        caption: "Grupo Jambo - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
       item10:
-        name: "Junior Almeida - Integração com frontend (parceria com Zeropixel)"
-        caption: "Junior Almeida"
+        name: "Junior Almeida"
+        caption: "Junior Almeida - Integração com frontend (parceria com Zeropixel)"
       item11:
-        name: "Maceió Mar Hotel - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
-        caption: "Maceió Mar Hotel"
+        name: "Maceió Mar Hotel"
+        caption: "Maceió Mar Hotel - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
       item12:
-        name: "Nordeste Gestão Contábil e Empresarial - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
-        caption: "Nordeste Gestão Contábil e Empresarial"
+        name: "Nordeste Gestão Contábil e Empresarial"
+        caption: "Nordeste Gestão Contábil e Empresarial - Desenvolvimento backend e integração com frontend (parceria com Zeropixel)"
