--- a/config/locales/experience.pt-BR.yml
+++ b/config/locales/experience.pt-BR.yml
@@ -56,4 +56,13 @@ pt-BR:
         position: "Engenheiro de Software"
         description: "Engenheiro de Software responsável por desenvolvimento de sistemas na empresa, em sistema de Home Office, usando Ruby on Rails, MySQL, Objective-C e Swift (iOS). Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Redmine e Pivotal para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Harverst para contabilização de horas, Git para versionamento de código, entre outras ferramentas."
         start_date: "Set / 2012"
-        end_date: "Atualmente"
+        end_date: "Set / 2015"
+      item7:
+        name: "Landing.jobs"
+        city: "Lisboa"
+        region: "LX"
+        country: "Portugal"
+        position: "Engenheiro de Software Senior"
+        description: "Engenheiro de Software Senior ajudando no desenvolvimento da plataforma da empresa usando Ruby on Rails, Postgres, Redis, Sidekiq. Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Trello para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Git para versionamento de código, entre outras ferramentas."
+        start_date: "Out / 2015"
+        end_date: "Currently"
