--- a/config/locales/contact.en.yml
+++ b/config/locales/contact.en.yml
@@ -5,10 +5,10 @@ en:
     contacts:
       title: "Contacts"
       address:
-        city: "Maceió"
-        state: "AL"
-        country: "Brazil"
-      phone: "+55 (82) 99987-2799"
+        city: "Lisbon"
+        state: "LX"
+        country: "Portugal"
+      phone: "+351 918 293 950"
       email: "gustavocunha&#64;gmail&#46;com"
       github: "gmmcal"
       linkedin: "Gustavo Cunha"
