--- a/config/locales/contact.pt-BR.yml
+++ b/config/locales/contact.pt-BR.yml
@@ -5,10 +5,10 @@ pt-BR:
     contacts:
       title: "Contatos"
       address:
-        city: "Maceió"
-        state: "AL"
-        country: "Brasil"
-      phone: "+55 (82) 99987-2799"
+        city: "Lisboa"
+        state: "LX"
+        country: "Portugal"
+      phone: "+351 918 293 950"
       email: "gustavocunha&#64;gmail&#46;com"
       github: "gmmcal"
       linkedin: "Gustavo Cunha"
