Update rails Change production server to puma (heroku)

--- a/config/locales/about.en.yml
+++ b/config/locales/about.en.yml
@@ -2,6 +2,6 @@ en:
   about:
     title: "About Me"
     job_title: "Software Engineer in Lisbon / LX - Portugal"
-    text: "<p itemprop=\"description\">Bachelor's degree in Computer Science and Specialist in Computer Software Engineering, I've being working with Web Development since 2003 and currently I'm a Software Engineer at Quimbik, Inc. Since 2010, I'm an enthusiast of Mobile Development and iOS certified developer since 2012 by IDS Tecnologia, first Apple Authorized Training Center in Latin America.</p><p>I like to work in group, research new things, come with solutions to solve problems, especially the tough ones. I enjoy challenges.</p>"
+    text: "<p itemprop=\"description\">Bachelor's degree in Computer Science and Specialist in Computer Software Engineering, I've being working with Web Development since 2003 and currently I'm a Software Engineer at Landing.jobs. Since 2010, I'm an enthusiast of Mobile Development and iOS certified developer since 2012 by IDS Tecnologia, first Apple Authorized Training Center in Latin America.</p><p>I like to work in group, research new things, come with solutions to solve problems, especially the tough ones. I enjoy challenges.</p>"
     file_title: "PDF Download"
     file: "gmmcal.en.pdf"
