--- a/config/locales/experience.en.yml
+++ b/config/locales/experience.en.yml
@@ -65,4 +65,13 @@ en:
         position: "Senior Software Engineer"
         description: "Senior Software Engineer helping to develop the company platform using Ruby on Rails, Postgres, Redis, Sidekiq. I work using tools to integrate the workflow routine, such as Trello, Skype, Slack and Git, among others."
         start_date: "Oct / 2015"
+        end_date: "Jun / 2017"
+      item8:
+        name: "Streetbees"
+        city: "Lisbon"
+        region: "LX"
+        country: "Portugal"
+        position: "Full Stack Developer"
+        description: ""
+        start_date: "Jul / 2017"
         end_date: "Currently"
