--- a/config/locales/experience.pt-BR.yml
+++ b/config/locales/experience.pt-BR.yml
@@ -65,4 +65,13 @@ pt-BR:
         position: "Engenheiro de Software Senior"
         description: "Engenheiro de Software Senior ajudando no desenvolvimento da plataforma da empresa usando Ruby on Rails, Postgres, Redis, Sidekiq. Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Trello para gerenciamento de tickets, Skype e Slack para reuniões e conversas, Git para versionamento de código, entre outras ferramentas."
         start_date: "Out / 2015"
+        end_date: "Jun / 2017"
+      item8:
+        name: "Streetbees"
+        city: "Lisboa"
+        region: "LX"
+        country: "Portugal"
+        position: "Desenvolvedor Full Stack"
+        description: ""
+        start_date: "Jul / 2017"
         end_date: "Atualmente"
