--- a/config/locales/about.pt-BR.yml
+++ b/config/locales/about.pt-BR.yml
@@ -2,6 +2,6 @@ pt-BR:
   about:
     title: "Sobre mim"
     job_title: "Engenheiro de Software em Lisboa / LX - Portugal"
-    text: "<p itemprop=\"description\">Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Engenheiro de Software na Landing.jobs. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012.</p><p>Gosto de trabalhar em grupo, pesquisar coisas novas, propor soluções, resolver problemas, principalmente os mais difíceis. Sou movido a desafios.</p>"
+    text: "<p itemprop=\"description\">Bacharel em Ciência da Computação e especialista em Engenharia de Software, trabalho com desenvolvimento web desde 2003 e atualmente sou Desenvolvedor Full Stack na Streetbees. Entusiasta de desenvolvimento mobile desde 2010, sou certificado em desenvolvimento para iOS pela IDS Tecnologia, primeira Apple Authorized Training Center na América Latina, desde 2012.</p><p>Gosto de trabalhar em grupo, pesquisar coisas novas, propor soluções, resolver problemas, principalmente os mais difíceis. Sou movido a desafios.</p>"
     file_title: "Download em PDF"
     file: "gmmcal.br.pdf"
