Integrate models to frontend
fixes #66

--- a/config/locales/template.en.yml
+++ b/config/locales/template.en.yml
@@ -2,6 +2,7 @@ en:
   template:
     name: "Gustavo Cunha"
     title: "Web developer, Mobile and Software Engineer Consultant"
+    current: 'Currently'
     menu:
       home: "Home"
       about: "About"
