--- a/config/locales/rails.en.yml
+++ b/config/locales/rails.en.yml
@@ -31,7 +31,7 @@ en:
     - Friday
     - Saturday
     formats:
-      default: ! '%Y-%m-%d'
+      default: ! '%b / %Y'
       long: ! '%B %d, %Y'
       short: ! '%b %d'
     month_names:
