Update bio and new job. Remove portfolio section.

--- a/config/locales/experience.en.yml
+++ b/config/locales/experience.en.yml
@@ -72,6 +72,15 @@ en:
         region: "LX"
         country: "Portugal"
         position: "Full Stack Developer"
-        description: ""
+        description: "Full Stack Developer using Ruby, Sinatra, Ruby on Rails, Postgres, Redis, Sidekiq, React, Redux, among others. I work using tools to integrate the workflow routine, such as Trello, Slack and Git."
         start_date: "Jul / 2017"
+        end_date: "Mar / 2018"
+      item9:
+        name: "KPN"
+        city: "Amsterdam"
+        region: "NL"
+        country: "Netherlands"
+        position: "Software Engineer"
+        description: ""
+        start_date: "Apr / 2018"
         end_date: "Currently"
