--- a/config/locales/experience.pt-BR.yml
+++ b/config/locales/experience.pt-BR.yml
@@ -72,6 +72,15 @@ pt-BR:
         region: "LX"
         country: "Portugal"
         position: "Desenvolvedor Full Stack"
-        description: ""
+        description: "Desenvolvedor Full Stack usando Ruby, Sinatra, Ruby on Rails, Postgres, Redis, Sidekiq, React, Redux, entre outras tecnologias. Trabalho usando ferramentas para a integração e funcionamento das rotinas de trabalho, como o Trello, Slack e Git."
         start_date: "Jul / 2017"
+        end_date: "Mar / 2018"
+      item9:
+        name: "KPN"
+        city: "Amsterdam"
+        region: "NL"
+        country: "Holanda"
+        position: "Engenheiro de Software"
+        description: ""
+        start_date: "Abr / 2018"
         end_date: "Atualmente"
