--- a/config/locales/contact.pt-BR.yml
+++ b/config/locales/contact.pt-BR.yml
@@ -5,10 +5,9 @@ pt-BR:
     contacts:
       title: "Contatos"
       address:
-        city: "Lisboa"
-        state: "LX"
-        country: "Portugal"
-      phone: "+351 918 293 950"
+        city: "Amsterdã"
+        country: "Holanda"
+      phone: "+31 06 51 41 60 37"
       email: "gustavocunha&#64;gmail&#46;com"
       github: "gmmcal"
       linkedin: "Gustavo Cunha"
