--- a/config/locales/experience.pt-BR.yml
+++ b/config/locales/experience.pt-BR.yml
@@ -77,7 +77,7 @@ pt-BR:
         end_date: "Mar / 2018"
       item9:
         name: "KPN"
-        city: "Amsterdam"
+        city: "Amsterdã"
         region: "NL"
         country: "Holanda"
         position: "Engenheiro de Software"
