--- a/config/locales/skills.pt-BR.yml
+++ b/config/locales/skills.pt-BR.yml
@@ -1,4 +1,4 @@
 pt-BR:
   skills:
     title: "Habilidades Técnicas"
-    subtitle: "Eu sei no que eu sou bom, mas estou sempre aprendendo"
+    subtitle: "Os assuntos que mais me interessam no momento, mas estou sempre aberto a novas tecnologias."
