--- a/config/locales/skills.en.yml
+++ b/config/locales/skills.en.yml
@@ -1,4 +1,4 @@
 en:
   skills:
     title: "Technical Skills"
-    subtitle: "The subjects I'm currently under my radar, but I'm always open to new technologies."
+    subtitle: "The subjects currently under my radar, but I'm always open to new technologies."
