--- a/config/locales/views/education/en.yml
+++ b/config/locales/views/education/en.yml
@@ -1,4 +1,4 @@
 en:
   education:
-    title: "Education and Diplomas"
-    subtitle: "What I did on my academic career"
+    title: Education and Diplomas
+    subtitle: What I did on my academic career
