--- a/config/locales/views/education/pt-BR.yml
+++ b/config/locales/views/education/pt-BR.yml
@@ -1,4 +1,4 @@
 pt-BR:
   education:
-    title: "Educação e Diplomas"
-    subtitle: "O que eu fiz na minha carreira acadêmica"
+    title: Educação e Diplomas
+    subtitle: O que eu fiz na minha carreira acadêmica
