--- a/config/locales/views/skills/en.yml
+++ b/config/locales/views/skills/en.yml
@@ -1,4 +1,4 @@
 en:
   skills:
-    title: "Technical Skills"
-    subtitle: "The subjects currently under my radar, but I'm always open to new technologies."
+    title: Technical Skills
+    subtitle: The subjects currently under my radar, but I'm always open to new technologies.
