--- a/config/locales/views/work_experience/en.yml
+++ b/config/locales/views/work_experience/en.yml
@@ -1,4 +1,4 @@
 en:
   experience:
-    title: "Work Experience"
-    subtitle: "Companies that I have worked for"
+    title: Work Experience
+    subtitle: Companies that I have worked for
