--- a/config/locales/views/work_experience/pt-BR.yml
+++ b/config/locales/views/work_experience/pt-BR.yml
@@ -1,4 +1,4 @@
 pt-BR:
   experience:
-    title: "Experiência de trabalho"
-    subtitle: "Empresas por onde andei"
+    title: Experiência de trabalho
+    subtitle: Empresas por onde andei
