--- a/config/locales/views/skills/pt-BR.yml
+++ b/config/locales/views/skills/pt-BR.yml
@@ -1,4 +1,4 @@
 pt-BR:
   skills:
-    title: "Habilidades Técnicas"
-    subtitle: "Os assuntos que mais me interessam no momento, mas estou sempre aberto a novas tecnologias."
+    title: Habilidades Técnicas
+    subtitle: Os assuntos que mais me interessam no momento, mas estou sempre aberto a novas tecnologias.
